--- a/crm_photostoria/main/templates/main/base.html
+++ b/crm_photostoria/main/templates/main/base.html
@@ -12,16 +12,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <div>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="/home" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/create-post" class="nav-link">Post</a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" href="#">Photostoria Personal</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -34,6 +28,8 @@
             </div>
         </div>
     </nav>
+    {% block content %}
+    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
