--- a/crm_photostoria/authenticate/templates/authenticate/login.html
+++ b/crm_photostoria/authenticate/templates/authenticate/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<main class="form-signin w-100 m-auto d-flex align-items-center py-4 bg-body-tertiary">
+<main class="form-signin w-100 m-auto d-flex align-items-center py-">
   <form>
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
